# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_screen/distributedscreen.gni")

module_out_path = "distributed_screen/services/data_buffer_test"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${fwk_common_path}/utils/include",
    "${fwk_common_path}/log/include",
    "${fwk_utils_path}/include/log",
  ]

  include_dirs += [
    "include",
    "${common_path}/include",
    "${services_path}/common/databuffer/include",
    "${services_path}/common/utils/include",
  ]
}

## UnitTest data_buffer_test
ohos_unittest("DataBufferTest") {
  module_out_path = module_out_path

  sources = [
    "${services_path}/common/test/unittest/databuffer/data_buffer_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${services_path}/screentransport/screensinktrans:distributed_screen_sinktrans",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
  ]
}

group("data_buffer_test") {
  testonly = true
  deps = [ ":DataBufferTest" ]
}
