# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_screen/distributedscreen.gni")

module_out_path = "distributed_screen/services/screen_decision_center_test"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "${common_path}/include",
    "${services_path}/common/databuffer/include",
    "${services_path}/common/decision_center/include",
    "${services_path}/common/imageJpeg/include",
    "${services_path}/common/screen_channel/include",
    "${services_path}/common/utils/include",
    "${services_path}/screentransport/screensourceprocessor/encoder/include",
    "${services_path}/screentransport/screensourceprocessor/include",
    "${services_path}/screentransport/screensourcetrans/include",
  ]
}

## UnitTest screen_decision_center_test
ohos_unittest("ScreenDecisionCenterTest") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  module_out_path = module_out_path

  sources = [ "${services_path}/common/test/unittest/decision_center/screen_decision_center_test.cpp" ]

  configs = [
    ":module_private_config",
    "${common_path}/test/unittest/resource:dscreen_unittest_public_config",
  ]

  deps = [ "${services_path}/screentransport/screensourcetrans:distributed_screen_sourcetrans" ]

  external_deps = [
    "av_codec:av_codec_client",
    "c_utils:utils",
    "graphic_surface:surface",
    "graphic_surface:sync_fence",
    "media_foundation:media_foundation",
  ]
}

group("screen_decision_center_test") {
  testonly = true
  deps = [ ":ScreenDecisionCenterTest" ]
}
