# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_screen/distributedscreen.gni")

module_out_path = "distributed_screen/services/utils_test"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "${common_path}/include",
    "${services_path}/common/databuffer/include",
    "${services_path}/common/utils/include",
  ]
}

## UnitTest utils_test
ohos_unittest("UtilsTest") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  module_out_path = module_out_path

  sources = [
    "${services_path}/common/test/unittest/utils/dscreen_fwkkit_test.cpp",
    "${services_path}/common/test/unittest/utils/dscreen_hidumper_test.cpp",
    "${services_path}/common/test/unittest/utils/dscreen_maprelation_test.cpp",
    "${services_path}/common/test/unittest/utils/video_param_test.cpp",
  ]

  configs = [
    ":module_private_config",
    "${common_path}/test/unittest/resource:dscreen_unittest_public_config",
  ]

  deps = [
    "${services_path}/screenservice/sinkservice:distributed_screen_sink",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "distributed_hardware_fwk:distributed_av_sender",
    "distributed_hardware_fwk:distributedhardwareutils",
    "distributed_hardware_fwk:libdhfwk_sdk",
  ]
}

group("utils_test") {
  testonly = true
  deps = [ ":UtilsTest" ]
}
