# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributedscreen/distributedscreen.gni")

##############################fuzztest##########################################
ohos_fuzztest("ScreenSinkProcessorFuzzTest") {
  module_out_path = "distributed_screen/screensinkprocessor"

  fuzz_config_file =
      "${services_path}/screentransport/test/fuzztest/screensinkprocessor_fuzzer"

  include_dirs = [
    "//third_party/json/include",
    "//foundation/graphic/standard/interfaces/innerkits/surface",
    "${fwk_common_path}/utils/include",
  ]

  include_dirs += [
    "./include",
    "${services_path}/screentransport/test/unittest/screentranstestutils/include",
    "${common_path}/include",
    "${services_path}/common/databuffer/include",
    "${services_path}/common/screen_channel/include",
    "${services_path}/common/utils/include",
    "${services_path}/screentransport/screendatachannel/include",
    "${services_path}/screentransport/screensourcetrans/include",
    "${services_path}/screentransport/screensinkprocessor/include",
    "${services_path}/screentransport/screensinktrans/include",
    "${services_path}/screentransport/screensinkprocessor/include",
    "${services_path}/screentransport/screensinkprocessor/decoder/include",
    "${services_path}/softbusadapter/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "screen_sink_processor_fuzzer.cpp" ]

  deps = [
    "${services_path}/screentransport/screensinktrans:distributed_screen_sinktrans",
    "${fwk_utils_path}:distributedhardwareutils",
    "//foundation/graphic/standard/frameworks/surface:surface",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "dsoftbus_standard:softbus_client",
    "hiviewdfx_hilog_native:libhilog",
    "multimedia_media_standard:media_client",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"ScreenSinkProcessorFuzzTest\"",
    "LOG_DOMAIN=0xD004100",
  ]
}
###############################################################################
group("fuzztest") {
  testonly = true
  deps = [ ":ScreenSinkProcessorFuzzTest" ]
}
###############################################################################
