# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_screen/distributedscreen.gni")

module_out_path = "distributed_screen/sink_processor_test"

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//third_party/json/include",
    "${fwk_common_path}/utils/include",
  ]

  include_dirs += [
    "./include",
    "${services_path}/screentransport/test/unittest/screentranstestutils/include",
    "${common_path}/include",
    "${services_path}/common/databuffer/include",
    "${services_path}/common/screen_channel/include",
    "${services_path}/common/utils/include",
    "${services_path}/screentransport/screendatachannel/include",
    "${services_path}/screentransport/screensourcetrans/include",
    "${services_path}/screentransport/screensinkprocessor/include",
    "${services_path}/screentransport/screensinktrans/include",
    "${services_path}/screentransport/screensinkprocessor/include",
    "${services_path}/screentransport/screensinkprocessor/decoder/include",
    "${services_path}/softbusadapter/include",
  ]
}

## UnitTest screen_sink_processor_test
ohos_unittest("SinkProcessorTest") {
  module_out_path = module_out_path

  sources = [
    "${services_path}/screentransport/test/unittest/screensinkprocessor/src/image_sink_decoder_test.cpp",
    "${services_path}/screentransport/test/unittest/screensinkprocessor/src/image_sink_processor_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${services_path}/screentransport/screensinktrans:distributed_screen_sinktrans",
    "//foundation/graphic/graphic_2d/frameworks/surface:surface",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "multimedia_player_framework:media_client",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"sinkprocessorest\"",
    "LOG_DOMAIN=0xD004100",
  ]

  remove_configs = [ "//build/config/compiler:no_rtti" ]
  cflags = [ "-frtti" ]
  cflags_cc = cflags
}

group("sink_processor_test") {
  testonly = true
  deps = [ ":SinkProcessorTest" ]
}
