# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_screen/distributedscreen.gni")

module_out_path = "distributed_screen/sink_processor_test"

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "./include",
    "${common_path}/include",
    "${services_path}/common/databuffer/include",
    "${services_path}/common/imageJpeg/include",
    "${services_path}/common/screen_channel/include",
    "${services_path}/common/utils/include",
    "${services_path}/softbusadapter/include",
    "${services_path}/screentransport/screendatachannel/include",
    "${services_path}/screentransport/screensinkprocessor/decoder/include",
    "${services_path}/screentransport/screensinkprocessor/include",
    "${services_path}/screentransport/screensinktrans/include",
    "${services_path}/screentransport/screensourcetrans/include",
    "${services_path}/screentransport/screensourceprocessor/include",
    "${services_path}/screentransport/test/unittest/screentranstestutils/include",
  ]
}

## UnitTest screen_sink_processor_test
ohos_unittest("SinkProcessorTest") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  module_out_path = module_out_path

  sources = [
    "${services_path}/screentransport/test/unittest/screensinkprocessor/src/image_sink_decoder_test.cpp",
    "${services_path}/screentransport/test/unittest/screensinkprocessor/src/image_sink_processor_test.cpp",
  ]

  configs = [
    ":module_private_config",
    "${common_path}/test/unittest/resource:dscreen_unittest_public_config",
  ]

  deps = [
    "${services_path}/screentransport/screensinktrans:distributed_screen_sinktrans",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "av_codec:av_codec_client",
    "c_utils:utils",
    "distributed_hardware_fwk:distributedhardwareutils",
    "graphic_surface:surface",
    "hilog:libhilog",
    "media_foundation:media_foundation",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"sinkprocessorest\"",
    "LOG_DOMAIN=0xD004140",
  ]
}

group("sink_processor_test") {
  testonly = true
  deps = [ ":SinkProcessorTest" ]
}
