# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributedscreen/distributedscreen.gni")

##############################fuzztest##########################################
ohos_fuzztest("SoftbusAdapterFuzzTest") {
  module_out_path = "distributed_screen/softbusadapter"

  fuzz_config_file =
      "${services_path}/softbusadapter/test/fuzztest/softbusadapter_fuzzer"

  include_dirs = [
    "//third_party/json/include",
    "//foundation/graphic/graphic/interfaces/innerkits/surface",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include/",
  ]

  include_dirs += [
    "./include",
    "${common_path}/include",
    "${services_path}/common/databuffer/include",
    "${services_path}/common/screen_channel/include",
    "${services_path}/common/utils/include",
    "${services_path}/screentransport/test/unittest/screensourcetrans/include",
    "${services_path}/screentransport/screensourcetrans/include",
    "${services_path}/screentransport/screendatachannel/include",
    "${services_path}/screentransport/screensourceprocessor/include",
    "${services_path}/screentransport/screensourceprocessor/encoder/include",
    "${services_path}/softbusadapter/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "softbus_adapter_fuzzer.cpp" ]

  deps = [
    "${fwk_utils_path}:distributedhardwareutils",
    "${services_path}/screentransport/screensourcetrans:distributed_screen_sourcetrans",
    "//foundation/graphic/graphic/frameworks/surface:surface",
    "//utils/native/base:utils",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"SoftbusAdapterFuzzTest\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "dsoftbus_standard:softbus_client",
    "hiviewdfx_hilog_native:libhilog",
    "multimedia_media_standard:media_client",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = [ ":SoftbusAdapterFuzzTest" ]
}
###############################################################################
