# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("../../../../../distributedscreen.gni")

##############################fuzztest##########################################
ohos_fuzztest("SoftbusAdapterFuzzTest") {
  module_out_path = "${fuzz_test_path}/softbusadapter"
  fuzz_config_file =
      "${services_path}/softbusadapter/test/fuzztest/softbusadapter_fuzzer"

  configs =
      [ "${common_path}/test/unittest/resource:dscreen_unittest_public_config" ]

  sources = [ "softbusadapter_fuzzer.cpp" ]

  include_dirs = [
    "${common_path}/include",
    "${services_path}/common/databuffer/include",
    "${services_path}/common/screen_channel/include",
    "${services_path}/common/utils/include",
    "${services_path}/screentransport/screensourcetrans/include",
    "${services_path}/screentransport/screendatachannel/include",
    "${services_path}/screentransport/screensourceprocessor/include",
    "${services_path}/screentransport/screensourceprocessor/encoder/include",
    "${services_path}/softbusadapter/include",
  ]

  deps = [ "${services_path}/screentransport/screensinktrans:distributed_screen_sinktrans" ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:distributed_av_receiver",
    "distributed_hardware_fwk:libdhfwk_sdk",
    "dsoftbus:softbus_client",
    "hilog:libhilog",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"SoftbusAdapterFuzzTest\"",
    "LOG_DOMAIN=0xD004140",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = [ ":SoftbusAdapterFuzzTest" ]
}
###############################################################################
