# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_screen/distributedscreen.gni")

module_out_path = "distributed_screen/source_trans_test"

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//third_party/json/include",
    "//foundation/graphic/graphic_2d/interfaces/innerkits/surface",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include",
  ]

  include_dirs += [
    "./include",
    "${services_path}/screentransport/test/unittest/screentranstestutils/include",
    "${common_path}/include",
    "${services_path}/common/databuffer/include",
    "${services_path}/common/screen_channel/include",
    "${services_path}/common/utils/include",
    "${interfaces_path}/innerkits/native_cpp/screen_sink/include",
    "${interfaces_path}/innerkits/native_cpp/test/unittest/screensinktest/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
  ]
}

## UnitTest ScreenSinkTest
ohos_unittest("ScreenSinkTest") {
  module_out_path = module_out_path

  sources = [ "${interfaces_path}/innerkits/native_cpp/test/unittest/screensinktest/src/dscreen_sink_handler_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "${fwk_utils_path}:distributedhardwareutils",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//foundation/distributedhardware/distributed_screen/interfaces/innerkits/native_cpp/screen_sink:distributed_screen_sink_sdk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_player_framework:media_client",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}

group("screen_sink_test") {
  testonly = true
  deps = [ ":ScreenSinkTest" ]
}
